Fixed wrong width in mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -16,13 +16,11 @@ a,
 }
 
 input[type='search'] {
+  width: 100%;
   padding: 0.5rem;
   border: 0;
   border-radius: 0.5rem;
-  max-width: 10rem;
-  @media (max-width: 1024px) {
-    width: 100%;
-  }
+  background-color: var(--color-background-soft);
 }
 
 input[type='search']:focus {
